Fix croppic positioning and add optimization function to image uploader

--- a/app/assets/stylesheets/custom/_loader.scss
+++ b/app/assets/stylesheets/custom/_loader.scss
@@ -62,6 +62,13 @@
 	&.open{
 		left:initial;
 	}
+	&.croppic-loader{
+		position: absolute;
+		top:50%;
+		left:50%;
+		right:initial;
+		bottom:initial;
+	}
 
 }
 
